--- a/src/Components/Body/Body.scss
+++ b/src/Components/Body/Body.scss
@@ -1,6 +1,7 @@
-.header{
+.body-header{
+  width: 100%;
+  position: fixed;
   padding-top: 55px;
-  padding-left: 50px;
 
   .header-box{
     width: 100%;
@@ -61,6 +62,35 @@
 
         &:hover{
           background-color: var(--text-background-color);
+        }
+      }
+    }
+
+    .header-right{
+
+      p{
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 400;
+        color: #717989;
+      }
+      
+      .hr{
+        width: 8px;
+        height: 24px; 
+        margin: 0px 15px;
+        border-right: 1px solid rgb(214, 217, 223);
+      }
+
+      .header-location{
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 600;
+        color: #bfc4cd;
+        margin-right: 10px;
+
+        img{
+          margin-right: 5px;
         }
       }
     }
