--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: Inter, sans-serif;
-  
+
   --Titan-White-color: #fefeff;
   --silver-color: #e6e8ec;
   --Azure--color: #0383f4;
@@ -52,4 +52,11 @@
   border-radius: 5px;
   padding: 5px 8px;
   border-radius: 5px;
+}
+
+.table-text {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #717989;
 }
