--- a/src/Components/Body/Body.scss
+++ b/src/Components/Body/Body.scss
@@ -2,6 +2,8 @@
   width: 100%;
   position: fixed;
   padding-top: 55px;
+  z-index: 1;
+  background-color: white;
 
   .header-box{
     width: 100%;
@@ -91,6 +93,26 @@
         margin-right: 10px;
         cursor:default;
 
+        .delete-btn{
+          padding: 10px;
+          margin-right: 15px;
+          font-size: 14px;
+          color: white;
+          font-weight: 500;
+          background-color: #dd2c53;
+          border: none;
+          border-radius: 5px;
+          display: none;
+
+          &:hover{
+            background-color: #b21a3f;
+          }
+        }
+
+        .delete-sodjfj{
+          display: flex;
+        }
+
         img{
           margin-right: 5px;
         }
@@ -101,21 +123,28 @@
 
 .table-grid{
   position: absolute;
-  top: 120px;
+  top: 125px;
   left: 70px;
-  // border: 1px solid black;
+  padding-bottom: 50px; 
+  background-color: white;
 
   table{
     border-collapse: collapse;
-    border: 1px solid var(--silver-color);
     border-left: none;
     
     .head-row{
       height: 32px;
+      border-left: none;
+      position: sticky;
+      top: 125px;
+      z-index: 2;
+      background-color: white;
 
       .column-sr{
-        width: 50px;
+        width: 45px;
         padding: 10px;
+        border: 1px solid var(--silver-color);
+        border-left: none;
 
         input{
           position: absolute;
@@ -163,6 +192,12 @@
             height: 16px;
             padding: 5px;
           }
+
+          input{
+            border: none;
+            outline: none;
+            background-color: transparent;
+          }
         }
 
         &:active{
@@ -187,10 +222,184 @@
           padding: 5px;
         }
       }
+    }
 
-      .lishdf{
+    .body-row{
+      height: 32px;
+      border: 1px solid var(--silver-color);
+      border-left: none;
+
+      .column-first{
+        position: absolute;
         display: flex;
+        justify-content: space-between;
+        width: 45px;
+        padding: 10px;
+
+        font-size: 14px;
+        color: 16181f;
+
+        div{
+          position: absolute;
+
+          p{
+            visibility: visible;
+          }
+          
+          input{
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+            height: 0px;
+            width: 0px;
+          }
+  
+          .eroisdf{
+            position: absolute;
+            cursor: pointer;
+            height: 0.875rem;
+            width: 0.875rem;
+            background-color: #E6E8EC;
+            border-radius: 0.25rem;
+            display: flex;
+            -webkit-box-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            align-items: center;
+            flex: 0 0 auto;
+            visibility: hidden;
+          }
+  
+          .oihsg{
+            background-color: #038ff7;
+            visibility: visible;
+          }
+          
+          .kfhskfh{
+            stroke: #E6E8EC;
+          }
+        }
+
+        img{
+          width: 12px;
+          height: 12px;
+          cursor: pointer;
+          visibility: hidden;
+        }
+
+        &:hover{
+          p{
+            visibility: hidden;
+          }
+
+          div{
+
+            .eroisdf{
+              visibility: visible;
+            }
+          }
+        }
+      }
+
+      .body-column{
+        padding: 6px;
+        border-left: 1px solid var(--silver-color);
+
+        font-size: 14px;
+        line-height: 18px;
+        color: #282c35;
+
+        div{
+          display: flex;
+          align-items: center;
+
+          span{
+            text-decoration:underline;
+          }
+        }
+
+        img{
+          width: 15px;
+          height: 15px;
+          margin-right: 10px;
+        }
+      }
+
+      .sr{
+        color: #717989;
+      }
+
+      .c1{
+        input{
+          border: none;
+          outline: none;
+        }
+      }
+
+      .c2{
+        display: flex;
+        justify-content: space-between;
+        font-weight: 500;
+        cursor: pointer;
+
+        .play{
+          width: 12px;
+          height: 12px;
+          padding: 5px;
+          border-radius: 5px;
+          visibility: hidden;
+        }
+
+        &:hover{
+          .play{
+            visibility: visible;
+            background-color: var(--silver-color);
+          }
+        }
+      }
+
+      .c3{
+        font-weight: 400;
+        color: #717989;
+        border-right: 1px solid var(--silver-color);
+      }
+
+      &:hover{
+        .column-first{
+          img{
+            visibility: visible;
+          }
+        }
       }
     }
   }
+}
+
+.new-row{
+  float: left;
+  padding: 8px;
+
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 500;
+  color: #16181f;
+  margin: 5px 0px;
+  cursor: pointer;
+
+  border-radius: 5px;
+  
+  img{
+    width: 16px;
+    height: 16px;
+    padding-right: 5px;
+  }
+
+  &:hover{
+    background-color: var(--text-background-color);
+  }
+}
+
+.delete-toast{
+  background-color: #aa70e6;
+  color: white;
 }
