--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: right;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
+  background-color: white;
 
   .nav{
     display: flex;
